Fix jumping parallax

--- a/static/css/juancustom.css
+++ b/static/css/juancustom.css
@@ -462,8 +462,7 @@ height: 100vh;
   height: 100vh;
   background-image: url(/images/background-image.jpg);
   background-size: cover;
-  background-position: 25% 50%;
-  /* filter: grayscale(20%) sepia(10%) opacity(90%); */
+  background-position: 25%;
 }
 
 #changingWord {
